update refs in vignettes

--- a/vignettes/forecast_evaluation.Rmd
+++ b/vignettes/forecast_evaluation.Rmd
@@ -329,13 +329,13 @@ The correlated AR(1) model consistently gives better forecasts, and the differen
 ## Further reading
 The following papers and resources offer useful material about Bayesian forecasting and proper scoring rules:
   
-Clark N.J., Ernest S.K.M., Senyondo H., Simonis J., White E.P., Yenni G.M., Karunarathna K.A.N.K. [Beyond single-species models: leveraging multispecies forecasts to navigate the dynamics of ecological predictability](https://peerj.com/articles/18929/). *PeerJ* 13:e18929 (2025) https://doi.org/10.7717/peerj.18929  
+Clark N.J., et al. [Beyond single-species models: leveraging multispecies forecasts to navigate the dynamics of ecological predictability](https://peerj.com/articles/18929/). *PeerJ* 13:e18929 (2025) https://doi.org/10.7717/peerj.18929  
   
-Hyndman, Rob J., and George Athanasopoulos. [Forecasting: principles and practice](https://otexts.com/fpp3/distaccuracy.html). *OTexts*, 2018.
+Hyndman, Rob J., and George Athanasopoulos. [Forecasting: principles and practice](https://otexts.com/fpp3/distaccuracy.html). *OTexts*, (2018).
   
 Gneiting, Tilmann, and Adrian E. Raftery. [Strictly proper scoring rules, prediction, and estimation](https://www.tandfonline.com/doi/abs/10.1198/016214506000001437) *Journal of the American statistical Association* 102.477 (2007) 359-378.  
   
-Simonis, Juniper L., Ethan P. White, and SK Morgan Ernest. [Evaluating probabilistic ecological forecasts](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/ecy.3431) *Ecology* 102.8 (2021) e03431.
+Simonis, Juniper L., et al. [Evaluating probabilistic ecological forecasts](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/ecy.3431) *Ecology* 102.8 (2021) e03431.
 
 ## Interested in contributing?
 I'm actively seeking PhD students and other researchers to work in the areas of ecological forecasting, multivariate model evaluation and development of `mvgam`. Please see [this small list of opportunities on my website](https://ecogambler.netlify.app/opportunities/) and do reach out if you are interested (n.clark'at'uq.edu.au)
