--- a/vignettes/data_in_mvgam.Rmd
+++ b/vignettes/data_in_mvgam.Rmd
@@ -41,7 +41,11 @@ This vignette gives an example of how to take raw data and format it for use in 
 ## Required *tidy* data format
 Manipulating the data into a 'long' format (i.e. *tidy* format) is necessary for modelling in `mvgam`. By 'long' format, we mean that each `series x time` observation needs to have its own entry in the `dataframe` or `list` object that we wish to pass as data for to the two primary modelling functions, `mvgam()` and `jsdgam()`. A simple example can be viewed by simulating data using the `sim_mvgam()` function. See `?sim_mvgam` for more details
 ```{r}
-simdat <- sim_mvgam(n_series = 4, T = 24, prop_missing = 0.2)
+simdat <- sim_mvgam(
+  n_series = 4, 
+  T = 24, 
+  prop_missing = 0.2
+)
 head(simdat$data_train, 16)
 ```
 
@@ -54,7 +58,8 @@ levels(simdat$data_train$series)
 
 It is important that the number of levels matches the number of unique series in the data to ensure indexing across series works properly in the underlying modelling functions. Several of the main workhorse functions in the package (including `mvgam()` and `get_mvgam_priors()`) will give an error if this is not the case, but it may be worth checking anyway:
 ```{r}
-all(levels(simdat$data_train$series) %in% unique(simdat$data_train$series))
+all(levels(simdat$data_train$series) %in% 
+      unique(simdat$data_train$series))
 ```
 
 Note that you can technically supply data that does not have a `series` indicator, and the package will generally assume that you are only using a single time series. There are exceptions to this, for example if you have grouped data and would like to estimate hierarchical dependencies (see an example of hierarchical process error correlations in the `?AR` documentation) or if you would like to set up a Joint Species Distribution Model (JSDM) using a Zero-Mean Multivariate Gaussian distribution for the latent residuals (see examples in the `?ZMVN` documentation).
@@ -62,14 +67,16 @@ Note that you can technically supply data that does not have a `series` indicato
 ### A single outcome variable
 You may also have notices that we do not spread the `numeric / integer`-classed outcome variable into different columns. Rather, there is only a single column for the outcome variable, labelled `y` in these simulated data (though the outcome does not have to be labelled `y`). This is another important requirement in `mvgam`, but it shouldn't be too unfamiliar to `R` users who frequently use modelling packages such as `lme4`, `mgcv`, `brms` or the many other regression modelling packages out there. The advantage of this format is that it is now very easy to specify effects that vary among time series:
 ```{r}
-summary(glm(y ~ series + time,
+summary(glm(
+  y ~ series + time,
   data = simdat$data_train,
   family = poisson()
 ))
 ```
 
 ```{r}
-summary(mgcv::gam(y ~ series + s(time, by = series),
+summary(mgcv::gam(
+  y ~ series + s(time, by = series),
   data = simdat$data_train,
   family = poisson()
 ))
@@ -407,8 +414,23 @@ str(testmod$model_data)
 ```
 
 ```{r}
-code(testmod)
+stancode(testmod)
 ```
+
+## Further reading
+The following papers and resources offer useful material about Dynamic GAMs and how they can be applied in practice:
+  
+Clark, Nicholas J. and Wells, K. [Dynamic Generalized Additive Models (DGAMs) for forecasting discrete ecological time series](https://doi.org/10.1111/2041-210X.13974). *Methods in Ecology and Evolution*. (2023): 14, 771-784.  
+  
+Clark, Nicholas J., et al. [Beyond single-species models: leveraging multispecies forecasts to navigate the dynamics of ecological predictability](https://peerj.com/articles/18929/). *PeerJ*. (2025): 13:e18929
+  
+de Sousa, Heitor C., et al. [Severe fire regimes decrease resilience of ectothermic populations](https://doi.org/10.1111/1365-2656.14188). *Journal of Animal Ecology* (2024): 93(11), 1656-1669.  
+  
+Hannaford, Naomi E., et al. [A sparse Bayesian hierarchical vector autoregressive model for microbial dynamics in a wastewater treatment plant.](https://doi.org/10.1016/j.csda.2022.107659) *Computational Statistics & Data Analysis* (2023): 179, 107659.
+  
+Karunarathna, K.A.N.K., et al. [Modelling nonlinear responses of a desert rodent species to environmental change with hierarchical dynamic generalized additive models](https://doi.org/10.1016/j.ecolmodel.2024.110648). *Ecological Modelling* (2024): 490, 110648.
+  
+Zhu, L., et al. [Responses of a widespread pest insect to extreme high temperatures are stage-dependent and divergent among seasonal cohorts](https://doi.org/10.1111/1365-2435.14711). *Functional Ecology* (2025): 39, 165–180. https://doi.org/10.1111/1365-2435.14711
 
 ## Interested in contributing?
 I'm actively seeking PhD students and other researchers to work in the areas of ecological forecasting, multivariate model evaluation and development of `mvgam`. Please see [this small list of opportunities on my website](https://ecogambler.netlify.app/opportunities/) and do reach out if you are interested (n.clark'at'uq.edu.au)
