--- a/README.Rmd
+++ b/README.Rmd
@@ -10,11 +10,7 @@ knitr::opts_chunk$set(
   comment = "#>",
   fig.path = "man/figures/README-",
   dev = "png",
-  dpi = 180,
-  fig.asp = 0.8,
-  fig.width = 6,
-  out.width = "60%",
-  fig.align = "center"
+  out.width = "100%"
 )
 ```
 
