--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,7 @@ The goal of the `mvgam` 📦 is to fit Bayesian Dynamic Generalized Additive Mod
 * [Joint Species Distribution Models](https://nicholasjclark.github.io/mvgam/reference/jsdgam.html){target="_blank"}
 
 ## Installation
-Install the stable version from `CRAN` using: `install.packages('mvgam')`, or install the development version from `GitHub` using:
+Install the stable package version from `CRAN` using: `install.packages('mvgam')`, or install the latest development version from `GitHub` using:
 `devtools::install_github("nicholasjclark/mvgam")`. You will also need a working version of `Stan` installed (along with either `rstan` and/or `cmdstanr`). Please refer to installation links for `Stan` with `rstan` [here](https://mc-stan.org/users/interfaces/rstan){target="_blank"}, or for `Stan` with `cmdstandr` [here](https://mc-stan.org/cmdstanr/){target="_blank"}.
 
 ## Cheatsheet
