--- a/README.Rmd
+++ b/README.Rmd
@@ -39,13 +39,13 @@ The `mvgam` 📦 fits Bayesian Dynamic Generalized Additive Models (DGAMs) that 
 * [Joint Species Distribution Models](https://nicholasjclark.github.io/mvgam/reference/jsdgam.html){target="_blank"}
 
 ## Installation
-You can install the stable package version from `CRAN` using: `install.packages('mvgam')`, or install the latest development version from `GitHub` using: `devtools::install_github("nicholasjclark/mvgam")`. You will also need a working version of `Stan` installed (along with either `rstan` and/or `cmdstanr`). Please refer to installation links for `Stan` with `rstan` [here](https://mc-stan.org/users/interfaces/rstan){target="_blank"}, or for `Stan` with `cmdstandr` [here](https://mc-stan.org/cmdstanr/){target="_blank"}.
+You can install the stable package version from `CRAN` using: `install.packages('mvgam')`, or install the latest development version directly from `GitHub` using: `devtools::install_github("nicholasjclark/mvgam")`. You will also need a working version of `Stan` installed (along with either `rstan` and/or `cmdstanr`). Please refer to installation links for `Stan` with `rstan` [here](https://mc-stan.org/users/interfaces/rstan){target="_blank"}, or for `Stan` with `cmdstandr` [here](https://mc-stan.org/cmdstanr/){target="_blank"}.
 
 ## Cheatsheet
 [![`mvgam` usage cheatsheet](https://github.com/nicholasjclark/mvgam/raw/master/misc/mvgam_cheatsheet.png)](https://github.com/nicholasjclark/mvgam/raw/master/misc/mvgam_cheatsheet.pdf)
 
 ## A simple example
-We can explore the package’s primary functions using one of it's built-in datasets. Use `plot_mvgam_series()` to inspect features for the four time series from [the Portal Project](https://portal.weecology.org/){target="_blank"}, which represent captures of four desert rodent species over time (see `?portal_data` for more details)
+We can explore the package’s primary functions using one of it's built-in datasets. Use `plot_mvgam_series()` to inspect features for the four time series from [the Portal Project](https://portal.weecology.org/){target="_blank"}, which represent counts of baited captures for four desert rodent species over time (see `?portal_data` for more details)
 ```{r include = FALSE}
 library(mvgam)
 library(ggplot2)
@@ -75,7 +75,7 @@ plot_mvgam_series(
 )
 ```
 
-These plots show that the time series are count-responses, with missing data, seasonality and temporal autocorrelation all present. These features make time series analysis and forecasting very difficult if using conventional software and models. But `mvgam` shines in these tasks. 
+These plots show that the time series are count-responses, with missing data, seasonality and temporal autocorrelation all present. These features make time series analysis and forecasting very difficult using conventional software. But `mvgam` shines in these tasks. 
 
 For most forecasting exercises, we'll want to split the data into training and testing folds
 ```{r}
