--- a/index.Rmd
+++ b/index.Rmd
@@ -114,8 +114,7 @@ As `mvgam` acts as an interface to `Stan`, please additionally cite:
 
 > Carpenter B., Gelman A., Hoffman M. D., Lee D., Goodrich B., Betancourt M., Brubaker M., Guo J., Li P., and Riddell A. (2017). Stan: A probabilistic programming language. *Journal of Statistical Software*. 76(1). DOI: https://doi.org/10.18637/jss.v076.i01
 
-`mvgam` relies on several other `R` packages and, of course, on `R` itself. To find out how to cite `R` and its packages, use `citation()`. There are
-some features of `mvgam` which specifically rely on certain packages. The most important of these is the generation of data necessary to estimate smoothing splines and Gaussian Processes, which rely on the `mgcv`, `brms` and `splines2` packages. The `rstan` and `cmdstanr` packages together with `Rcpp` makes `Stan` conveniently accessible in `R`. If you use some of these features, please also consider citing the related packages.
+`mvgam` relies on several other `R` packages and, of course, on `R` itself. Use `how_to_cite()` after you have fitted a model to simplify the process of finding appropriate citations for your software setup.
 
 
 ## Other resources
